--- a/src/main/resources/EditClientPopup.fxml
+++ b/src/main/resources/EditClientPopup.fxml
@@ -1,6 +1,27 @@
-<?xml version="1.0" encoding="UTF-8"?> <?import javafx.geometry.Insets?> <?import javafx.scene.control.Button?> <?import javafx.scene.control.Label?> <?import javafx.scene.control.PasswordField?> <?import javafx.scene.control.TextField?> <?import javafx.scene.layout.AnchorPane?> <?import javafx.scene.layout.HBox?> <?import javafx.scene.layout.VBox?> <?import javafx.scene.layout.GridPane?> <?import javafx.scene.layout.Pane?> <?import javafx.scene.effect.DropShadow?> <?import javafx.scene.text.Font?> <?import java.net.URL?> <AnchorPane prefHeight="600.0" prefWidth="700.0" style="-fx-background-color: #f4f6f9;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.EditClientPopupController"> <stylesheets> <URL value="@/styles/admin-common.css" /> <URL value="@/styles/tableview.css" /> </stylesheets>
+<?xml version="1.0" encoding="UTF-8"?>
+
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.text.Font?>
+<?import java.net.URL?>
+
+<AnchorPane prefHeight="650.0" prefWidth="700.0" style="-fx-background-color: #f4f6f9;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.EditClientPopupController">
+    <stylesheets>
+        <URL value="@/styles/admin-common.css" />
+        <URL value="@/styles/tableview.css" />
+    </stylesheets>
     <children>
-        <VBox prefHeight="600.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <VBox prefHeight="650.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
                 <HBox alignment="CENTER_LEFT" prefHeight="80.0" prefWidth="700.0" style="-fx-background-color: white;">
                     <effect>
@@ -14,7 +35,6 @@
                         </Label>
                     </children>
                 </HBox>
-
                 <HBox alignment="CENTER_LEFT" prefHeight="50.0" style="-fx-background-color: #f4f6f9;">
                     <children>
                         <Label text="Informations du client" styleClass="label-subheader">
@@ -27,8 +47,7 @@
                         <Insets top="20.0" />
                     </VBox.margin>
                 </HBox>
-
-                <VBox prefHeight="350.0" prefWidth="650.0" styleClass="card">
+                <VBox prefHeight="400.0" prefWidth="650.0" styleClass="card">
                     <VBox.margin>
                         <Insets bottom="20.0" left="25.0" right="25.0" top="10.0" />
                     </VBox.margin>
@@ -36,6 +55,16 @@
                         <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
                     </padding>
                     <children>
+                        <HBox alignment="CENTER" spacing="10.0">
+                            <children>
+                                <ImageView fx:id="iv_profilePicture" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" />
+                                <Button mnemonicParsing="false" onAction="#selectProfilePicture" text="Changer la photo" styleClass="button button-primary">
+                                    <HBox.margin>
+                                        <Insets left="10.0" />
+                                    </HBox.margin>
+                                </Button>
+                            </children>
+                        </HBox>
                         <GridPane hgap="20.0" vgap="15.0">
                             <columnConstraints>
                                 <javafx.scene.layout.ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
@@ -87,7 +116,6 @@
                         </GridPane>
                     </children>
                 </VBox>
-
                 <HBox alignment="CENTER" prefHeight="60.0" prefWidth="650.0" styleClass="card">
                     <VBox.margin>
                         <Insets bottom="20.0" left="25.0" right="25.0" />
@@ -105,7 +133,6 @@
                         </Button>
                     </children>
                 </HBox>
-
                 <Label fx:id="statusLabel" alignment="CENTER" prefHeight="20.0" prefWidth="650.0" styleClass="label-value" textFill="#1e3a8a">
                     <VBox.margin>
                         <Insets left="25.0" right="25.0" />
