--- a/src/main/resources/UserProfile.fxml
+++ b/src/main/resources/UserProfile.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -49,7 +50,7 @@
                     </VBox.margin>
                 </HBox>
 
-                <VBox prefHeight="350.0" prefWidth="650.0" styleClass="card">
+                <VBox prefHeight="400.0" prefWidth="650.0" styleClass="card">
                     <VBox.margin>
                         <Insets bottom="20.0" left="25.0" right="25.0" top="10.0" />
                     </VBox.margin>
@@ -57,6 +58,16 @@
                         <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
                     </padding>
                     <children>
+                        <HBox alignment="CENTER" spacing="10.0">
+                            <children>
+                                <ImageView fx:id="iv_profilePicture" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" />
+                                <Button mnemonicParsing="false" onAction="#selectProfilePicture" text="Changer la photo" styleClass="button button-primary">
+                                    <HBox.margin>
+                                        <Insets left="10.0" />
+                                    </HBox.margin>
+                                </Button>
+                            </children>
+                        </HBox>
                         <GridPane hgap="20.0" vgap="15.0">
                             <columnConstraints>
                                 <javafx.scene.layout.ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
