--- a/src/main/resources/CatalogueVehicules.fxml
+++ b/src/main/resources/CatalogueVehicules.fxml
@@ -2,41 +2,50 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="root-pane" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CatalogueVehiculesController">
+<BorderPane fx:id="rootPane" styleClass="root-pane" xmlns="http://javafx.com/javafx/21.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CatalogueVehiculesController">
     <top>
-        <VBox styleClass="header">
+        <HBox alignment="CENTER" spacing="10" styleClass="header">
             <children>
                 <Label styleClass="header-title" text="Car Rental - Vehicle Catalog" />
-                <HBox alignment="CENTER" spacing="10.0">
-                    <children>
-                        <TextField fx:id="searchField" promptText="Search by type or price" styleClass="search-field" />
-                        <Button onAction="#handleSearch" styleClass="button" text="Search" />
-                    </children>
-                    <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </padding>
-                </HBox>
             </children>
-        </VBox>
+            <padding>
+                <Insets bottom="10" left="10" right="10" top="10" />
+            </padding>
+        </HBox>
     </top>
     <center>
-        <ScrollPane fitToWidth="true" stylesheets="@styles/med.css">
-            <content>
-                <TilePane fx:id="vehiclePane" hgap="20.0" styleClass="tile-pane" vgap="20.0">
-                    <!-- Vehicle cards will be added dynamically -->
-                </TilePane>
-            </content>
-            <padding>
-                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-            </padding>
-        </ScrollPane>
+        <TilePane fx:id="vehiclePane" hgap="10" styleClass="tile-pane" vgap="10" />
     </center>
+    <bottom>
+        <HBox alignment="CENTER" spacing="10" styleClass="search-pane">
+            <children>
+                <Label styleClass="search-label" text="Filter by Type:" />
+                <ComboBox fx:id="typeFilter" promptText="Select Type" styleClass="search-field" />
+                <Label styleClass="search-label" text="Min Price:" />
+                <TextField fx:id="minPriceField" prefWidth="100" promptText="Min Price" styleClass="search-field" />
+                <Label styleClass="search-label" text="Max Price:" />
+                <TextField fx:id="maxPriceField" prefWidth="100" promptText="Max Price" styleClass="search-field" />
+                <Button onAction="#handleSearch" styleClass="button" text="Search" />
+                <Button onAction="#openManageReservations" styleClass="button" text="Manage Reservations" />
+            </children>
+            <padding>
+                <Insets bottom="10" left="10" right="10" top="10" />
+            </padding>
+        </HBox>
+    </bottom>
+    <right>
+        <VBox fx:id="formContainer" visible="false" managed="false" styleClass="form-container">
+            <padding>
+                <Insets top="10" right="10" bottom="10" left="10" />
+            </padding>
+        </VBox>
+    </right>
 </BorderPane>
