--- a/src/main/resources/CatalogueVehicules.fxml
+++ b/src/main/resources/CatalogueVehicules.fxml
@@ -9,12 +9,19 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
+<?import java.net.URL?>
 
-<BorderPane fx:id="rootPane" styleClass="root-pane" xmlns="http://javafx.com/javafx/21.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CatalogueVehiculesController">
+<BorderPane fx:id="rootPane" prefHeight="700.0" prefWidth="760.0" styleClass="root-pane" xmlns="http://javafx.com/javafx/21.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CatalogueVehiculesController">
+    <stylesheets>
+        <URL value="@/styles/med.css" />
+        <URL value="@/styles/admin-common.css" />
+        <URL value="@/styles/tableview.css" />
+    </stylesheets>
     <top>
-        <HBox alignment="CENTER" spacing="10" styleClass="header">
+        <HBox alignment="CENTER_LEFT" spacing="10" styleClass="header">
             <children>
                 <Label styleClass="header-title" text="Car Rental - Vehicle Catalog" />
+                <Button onAction="#backToDashboard" styleClass="button" text="Retour" />
             </children>
             <padding>
                 <Insets bottom="10" left="10" right="10" top="10" />
@@ -22,7 +29,7 @@
         </HBox>
     </top>
     <center>
-        <TilePane fx:id="vehiclePane" hgap="10" styleClass="tile-pane" vgap="10" />
+        <TilePane fx:id="vehiclePane" hgap="10" prefHeight="500.0" prefWidth="560.0" styleClass="tile-pane" vgap="10" BorderPane.alignment="CENTER" />
     </center>
     <bottom>
         <HBox alignment="CENTER" spacing="10" styleClass="search-pane">
@@ -42,7 +49,7 @@
         </HBox>
     </bottom>
     <right>
-        <VBox fx:id="formContainer" visible="false" managed="false" styleClass="form-container">
+        <VBox fx:id="formContainer" prefWidth="200.0" visible="false" managed="false" styleClass="form-container">
             <padding>
                 <Insets top="10" right="10" bottom="10" left="10" />
             </padding>
