fixed the user reclamation  thing

--- a/src/main/resources/styles/admin-common.css
+++ b/src/main/resources/styles/admin-common.css
@@ -13,6 +13,7 @@
 .button-primary {
     -fx-background-color: #1e40af;
     -fx-text-fill: white;
+    -fx-alignment: center-left;
 }
 
 .button-primary:hover {
