--- a/src/main/resources/Myreservations.fxml
+++ b/src/main/resources/Myreservations.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -14,9 +15,9 @@
                 <Font name="System Bold" size="24.0" />
             </font>
         </Label>
-        <ScrollPane layoutX="150.0" layoutY="80.0" prefHeight="600.0" prefWidth="927.0" fitToWidth="true">
+        <ScrollPane fitToWidth="true" layoutX="14.0" layoutY="75.0" prefHeight="700.0" prefWidth="1207.0">
             <content>
-                <GridPane fx:id="reservationsContainer" hgap="20" vgap="20" style="-fx-padding: 20;">
+                <GridPane fx:id="reservationsContainer" hgap="20" style="-fx-padding: 20;" vgap="20">
                     <columnConstraints>
                         <ColumnConstraints percentWidth="20.0" />
                         <ColumnConstraints percentWidth="20.0" />
