--- a/src/main/resources/FlightBookingConfirmation.fxml
+++ b/src/main/resources/FlightBookingConfirmation.fxml
@@ -1,26 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.text.Font?>
-<?import java.net.URL?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="800.0" prefWidth="900.0" style="-fx-background-color: #f4f6f9;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.FlightBookingController">
     <stylesheets>
-        <URL value="@/styles/admin-common.css" />
-        <URL value="@/styles/tableview.css" />
+        <URL value="@/flight-booking-styles.css" />
     </stylesheets>
 
     <children>
@@ -28,10 +27,10 @@
             <children>
                 <HBox alignment="CENTER_LEFT" prefHeight="80.0" prefWidth="900.0" style="-fx-background-color: white;">
                     <effect>
-                        <DropShadow height="10.0" radius="4.5" width="10.0" color="#00000033" />
+                        <DropShadow color="#00000033" height="10.0" radius="4.5" width="10.0" />
                     </effect>
                     <children>
-                        <Label text="Confirmation de Réservation" styleClass="label-header">
+                        <Label styleClass="label-header" text="Confirmation de Réservation">
                             <HBox.margin>
                                 <Insets left="25.0" />
                             </HBox.margin>
@@ -41,7 +40,7 @@
 
                 <HBox alignment="CENTER_LEFT" prefHeight="50.0" style="-fx-background-color: #f4f6f9;">
                     <children>
-                        <Label text="Détails du Vol" styleClass="label-subheader">
+                        <Label styleClass="label-subheader" text="Détails du Vol">
                             <HBox.margin>
                                 <Insets left="25.0" />
                             </HBox.margin>
@@ -68,37 +67,37 @@
                                 </font>
                             </Label>
                             <Region HBox.hgrow="ALWAYS" />
-                            <Label fx:id="flightNumberLabel" text="Flight XYZ123" style="-fx-text-fill: #757575;" />
+                            <Label fx:id="flightNumberLabel" style="-fx-text-fill: #757575;" text="Flight XYZ123" />
                         </HBox>
 
-                        <HBox alignment="CENTER" spacing="10.0" prefHeight="60.0">
+                        <HBox alignment="CENTER" prefHeight="92.0" prefWidth="861.0" spacing="10.0" style="-fx-background-color: #87f3cf;">
                             <padding>
-                                <Insets top="15.0" bottom="15.0" />
+                                <Insets bottom="15.0" top="15.0" />
                             </padding>
-                            <Label fx:id="departureLabel" text="City\n00:00" />
+                            <Label fx:id="departureLabel" prefHeight="74.0" prefWidth="98.0" text="City\n00:00" />
                             <VBox alignment="CENTER">
                                 <Region prefHeight="1.0" prefWidth="200.0" style="-fx-background-color: #BDBDBD;" />
-                                <Label fx:id="durationLabel" text="0h 00m" style="-fx-text-fill: #757575;" />
+                                <Label fx:id="durationLabel" style="-fx-text-fill: #757575;" text="0h 00m" />
                             </VBox>
-                            <Label fx:id="destinationLabel" text="City\n00:00" />
+                            <Label fx:id="destinationLabel" prefHeight="59.0" prefWidth="166.0" text="City\n00:00" />
                         </HBox>
 
                         <HBox alignment="CENTER_LEFT" spacing="15.0">
-                            <Label fx:id="priceLabel" text="0.00" style="-fx-text-fill: #FF6F00;">
+                            <Label fx:id="priceLabel" style="-fx-text-fill: #FF6F00;" text="0.00">
                                 <font>
                                     <Font name="System Bold" size="18.0" />
                                 </font>
                             </Label>
-                            <Label fx:id="seatsLabel" text="0 seats" style="-fx-text-fill: #4CAF50;" />
-                            <Label fx:id="dateLabel" text="01 Jan 2025" style="-fx-text-fill: #616161;" />
-                            <Label fx:id="passengersLabel" text="1 passenger(s)" style="-fx-text-fill: #616161;" />
+                            <Label fx:id="seatsLabel" style="-fx-text-fill: #4CAF50;" text="0 seats" />
+                            <Label fx:id="dateLabel" style="-fx-text-fill: #616161;" text="01 Jan 2025" />
+                            <Label fx:id="passengersLabel" style="-fx-text-fill: #616161;" text="1 passenger(s)" />
                         </HBox>
                     </children>
                 </VBox>
 
                 <HBox alignment="CENTER_LEFT" prefHeight="50.0" style="-fx-background-color: #f4f6f9;">
                     <children>
-                        <Label text="Informations du Client" styleClass="label-subheader">
+                        <Label styleClass="label-subheader" text="Informations du Client">
                             <HBox.margin>
                                 <Insets left="25.0" />
                             </HBox.margin>
@@ -109,7 +108,7 @@
                     </VBox.margin>
                 </HBox>
 
-                <VBox prefHeight="320.0" prefWidth="850.0" styleClass="card">
+                <VBox prefHeight="320.0" prefWidth="850.0" style="-fx-background-color: #87f3cf;" styleClass="card">
                     <VBox.margin>
                         <Insets bottom="20.0" left="25.0" right="25.0" top="10.0" />
                     </VBox.margin>
@@ -130,38 +129,38 @@
                             <children>
                                 <VBox spacing="5.0">
                                     <children>
-                                        <Label text="Nom" styleClass="label-info" />
+                                        <Label styleClass="label-info" text="Nom" />
                                         <TextField fx:id="tf_nom" styleClass="text-field" />
                                     </children>
                                 </VBox>
                                 <VBox spacing="5.0" GridPane.columnIndex="1">
                                     <children>
-                                        <Label text="Prénom" styleClass="label-info" />
+                                        <Label styleClass="label-info" text="Prénom" />
                                         <TextField fx:id="tf_prenom" styleClass="text-field" />
                                     </children>
                                 </VBox>
                                 <VBox spacing="5.0" GridPane.rowIndex="1">
                                     <children>
-                                        <Label text="Email" styleClass="label-info" />
+                                        <Label styleClass="label-info" text="Email" />
                                         <TextField fx:id="tf_email" styleClass="text-field" />
                                     </children>
                                 </VBox>
                                 <VBox spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                     <children>
-                                        <Label text="Téléphone" styleClass="label-info" />
+                                        <Label styleClass="label-info" text="Téléphone" />
                                         <TextField fx:id="tf_telephone" styleClass="text-field" />
                                     </children>
                                 </VBox>
                                 <VBox spacing="5.0" GridPane.rowIndex="2">
                                     <children>
-                                        <Label text="Date de naissance" styleClass="label-info" />
+                                        <Label styleClass="label-info" text="Date de naissance" />
                                         <TextField fx:id="tf_dateNaissance" styleClass="text-field" />
                                     </children>
                                 </VBox>
                                 <VBox spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                     <children>
-                                        <Label text="Nombre de passagers" styleClass="label-info" />
-                                        <TextField fx:id="tf_passengers" styleClass="text-field" editable="false" />
+                                        <Label styleClass="label-info" text="Nombre de passagers" />
+                                        <TextField fx:id="tf_passengers" editable="false" styleClass="text-field" />
                                     </children>
                                 </VBox>
                             </children>
@@ -187,7 +186,7 @@
                     </children>
                 </HBox>
 
-                <Label fx:id="statusLabel" alignment="CENTER" prefHeight="20.0" prefWidth="850.0" styleClass="label-value" style="-fx-text-fill: #1e3a8a;">
+                <Label fx:id="statusLabel" alignment="CENTER" prefHeight="20.0" prefWidth="850.0" style="-fx-text-fill: #1e3a8a;" styleClass="label-value">
                     <VBox.margin>
                         <Insets left="25.0" right="25.0" />
                     </VBox.margin>
