--- a/src/main/resources/ResetPassword.fxml
+++ b/src/main/resources/ResetPassword.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -79,14 +80,21 @@
                                         <Insets top="20.0" />
                                     </VBox.margin>
                                 </Label>
-                                <PasswordField fx:id="tf_new_password" prefHeight="40.0" prefWidth="390.0" promptText="Entrez votre nouveau mot de passe" style="-fx-background-radius: 5;">
-                                    <VBox.margin>
-                                        <Insets top="5.0" />
-                                    </VBox.margin>
-                                    <font>
-                                        <Font size="14.0" />
-                                    </font>
-                                </PasswordField>
+                                <HBox spacing="0">
+                                    <children>
+                                        <PasswordField fx:id="tf_new_password" prefHeight="40.0" prefWidth="390.0" promptText="Entrez votre nouveau mot de passe" style="-fx-background-radius: 5;" />
+                                        <TextField fx:id="tf_new_password_visible" prefHeight="40.0" prefWidth="390.0" promptText="Entrez votre nouveau mot de passe" style="-fx-background-radius: 5;" visible="false" managed="false" />
+                                        <Button fx:id="btn_toggle_new_password" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" style="-fx-background-radius: 5;" onAction="#toggleNewPasswordVisibility">
+                                            <graphic>
+                                                <ImageView fitHeight="20.0" fitWidth="20.0">
+                                                    <image>
+                                                        <Image url="@/images/eye.png" />
+                                                    </image>
+                                                </ImageView>
+                                            </graphic>
+                                        </Button>
+                                    </children>
+                                </HBox>
                             </children>
                         </VBox>
 
@@ -100,14 +108,21 @@
                                         <Insets top="15.0" />
                                     </VBox.margin>
                                 </Label>
-                                <PasswordField fx:id="tf_confirm_password" prefHeight="40.0" prefWidth="390.0" promptText="Confirmez votre nouveau mot de passe" style="-fx-background-radius: 5;">
-                                    <VBox.margin>
-                                        <Insets top="5.0" />
-                                    </VBox.margin>
-                                    <font>
-                                        <Font size="14.0" />
-                                    </font>
-                                </PasswordField>
+                                <HBox spacing="0">
+                                    <children>
+                                        <PasswordField fx:id="tf_confirm_password" prefHeight="40.0" prefWidth="390.0" promptText="Confirmez votre nouveau mot de passe" style="-fx-background-radius: 5;" />
+                                        <TextField fx:id="tf_confirm_password_visible" prefHeight="40.0" prefWidth="390.0" promptText="Confirmez votre nouveau mot de passe" style="-fx-background-radius: 5;" visible="false" managed="false" />
+                                        <Button fx:id="btn_toggle_confirm_password" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" style="-fx-background-radius: 5;" onAction="#toggleConfirmPasswordVisibility">
+                                            <graphic>
+                                                <ImageView fitHeight="20.0" fitWidth="20.0">
+                                                    <image>
+                                                        <Image url="@/images/eye.png" />
+                                                    </image>
+                                                </ImageView>
+                                            </graphic>
+                                        </Button>
+                                    </children>
+                                </HBox>
                             </children>
                         </VBox>
 
