--- a/src/main/resources/AddClientPopup.fxml
+++ b/src/main/resources/AddClientPopup.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -51,6 +52,7 @@
                         <javafx.scene.layout.ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="215.0" />
                     </columnConstraints>
                     <rowConstraints>
+                        <javafx.scene.layout.RowConstraints minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
                         <javafx.scene.layout.RowConstraints minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
                         <javafx.scene.layout.RowConstraints minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
                         <javafx.scene.layout.RowConstraints minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
@@ -134,11 +136,21 @@
                                         <Font size="12.0" />
                                     </font>
                                 </Label>
-                                <PasswordField fx:id="tf_mdp" prefHeight="40.0" promptText="Entrez un mot de passe" styleClass="text-field">
-                                    <font>
-                                        <Font size="14.0" />
-                                    </font>
-                                </PasswordField>
+                                <HBox spacing="0">
+                                    <children>
+                                        <PasswordField fx:id="tf_mdp" prefHeight="40.0" promptText="Entrez un mot de passe" styleClass="text-field" />
+                                        <TextField fx:id="tf_mdp_visible" prefHeight="40.0" promptText="Entrez un mot de passe" styleClass="text-field" visible="false" managed="false" />
+                                        <Button fx:id="btn_toggle_mdp" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="text-field" onAction="#toggleMdpVisibility">
+                                            <graphic>
+                                                <ImageView fitHeight="20.0" fitWidth="20.0">
+                                                    <image>
+                                                        <Image url="/images/eye.png" />
+                                                    </image>
+                                                </ImageView>
+                                            </graphic>
+                                        </Button>
+                                    </children>
+                                </HBox>
                             </children>
                         </VBox>
                         <VBox spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
@@ -148,11 +160,41 @@
                                         <Font size="12.0" />
                                     </font>
                                 </Label>
-                                <PasswordField fx:id="tf_mdp_confirm" prefHeight="40.0" promptText="Confirmez le mot de passe" styleClass="text-field">
+                                <HBox spacing="0">
+                                    <children>
+                                        <PasswordField fx:id="tf_mdp_confirm" prefHeight="40.0" promptText="Confirmez le mot de passe" styleClass="text-field" />
+                                        <TextField fx:id="tf_mdp_confirm_visible" prefHeight="40.0" promptText="Confirmez le mot de passe" styleClass="text-field" visible="false" managed="false" />
+                                        <Button fx:id="btn_toggle_mdp_confirm" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="text-field" onAction="#toggleMdpConfirmVisibility">
+                                            <graphic>
+                                                <ImageView fitHeight="20.0" fitWidth="20.0">
+                                                    <image>
+                                                        <Image url="/images/eye.png" />
+                                                    </image>
+                                                </ImageView>
+                                            </graphic>
+                                        </Button>
+                                    </children>
+                                </HBox>
+                            </children>
+                        </VBox>
+                        <VBox spacing="5.0" GridPane.columnIndex="0" GridPane.rowIndex="4">
+                            <children>
+                                <Label text="Rôle">
                                     <font>
-                                        <Font size="14.0" />
+                                        <Font size="12.0" />
                                     </font>
-                                </PasswordField>
+                                </Label>
+                                <ComboBox fx:id="cb_role" prefHeight="40.0" promptText="Sélectionnez le rôle" styleClass="combo-box"/>
+                            </children>
+                        </VBox>
+                        <VBox spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                            <children>
+                                <Label text="Genre">
+                                    <font>
+                                        <Font size="12.0" />
+                                    </font>
+                                </Label>
+                                <ComboBox fx:id="cb_gender" prefHeight="40.0" promptText="Sélectionnez le genre" styleClass="combo-box"/>
                             </children>
                         </VBox>
                     </children>
