--- a/src/main/resources/AjouterPersonne.fxml
+++ b/src/main/resources/AjouterPersonne.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -62,6 +63,7 @@
                         <javafx.scene.layout.RowConstraints minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
                         <javafx.scene.layout.RowConstraints minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
                         <javafx.scene.layout.RowConstraints minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
+                        <javafx.scene.layout.RowConstraints minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
                         <VBox spacing="5.0">
@@ -106,7 +108,7 @@
                               </TextField>
                            </children>
                         </VBox>
-                        <VBox spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <VBox spacing="5.0" GridPane.columnIndex="0" GridPane.rowIndex="2">
                            <children>
                               <Label text="Numéro de téléphone">
                                  <font>
@@ -120,7 +122,7 @@
                               </TextField>
                            </children>
                         </VBox>
-                        <VBox spacing="5.0" GridPane.rowIndex="2">
+                        <VBox spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                            <children>
                               <Label text="Date de naissance">
                                  <font>
@@ -141,11 +143,21 @@
                                     <Font size="12.0" />
                                  </font>
                               </Label>
-                              <PasswordField fx:id="tf_mdp" prefHeight="40.0" promptText="Entrez un mot de passe" style="-fx-background-radius: 5;">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                              </PasswordField>
+                              <HBox spacing="0">
+                                 <children>
+                                    <PasswordField fx:id="tf_mdp" prefHeight="40.0" promptText="Entrez un mot de passe" style="-fx-background-radius: 5;" />
+                                    <TextField fx:id="tf_mdp_visible" prefHeight="40.0" promptText="Entrez un mot de passe" style="-fx-background-radius: 5;" visible="false" managed="false" />
+                                    <Button fx:id="btn_toggle_mdp" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" style="-fx-background-radius: 5;" onAction="#toggleMdpVisibility">
+                                       <graphic>
+                                          <ImageView fitHeight="20.0" fitWidth="20.0">
+                                             <image>
+                                                <Image url="/images/eye.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                    </Button>
+                                 </children>
+                              </HBox>
                            </children>
                         </VBox>
                         <VBox spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
@@ -155,11 +167,31 @@
                                     <Font size="12.0" />
                                  </font>
                               </Label>
-                              <PasswordField fx:id="tf_mdp_confirm" prefHeight="40.0" promptText="Confirmez le mot de passe" style="-fx-background-radius: 5;">
+                              <HBox spacing="0">
+                                 <children>
+                                    <PasswordField fx:id="tf_mdp_confirm" prefHeight="40.0" promptText="Confirmez le mot de passe" style="-fx-background-radius: 5;" />
+                                    <TextField fx:id="tf_mdp_confirm_visible" prefHeight="40.0" promptText="Confirmez le mot de passe" style="-fx-background-radius: 5;" visible="false" managed="false" />
+                                    <Button fx:id="btn_toggle_mdp_confirm" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" style="-fx-background-radius: 5;" onAction="#toggleMdpConfirmVisibility">
+                                       <graphic>
+                                          <ImageView fitHeight="20.0" fitWidth="20.0">
+                                             <image>
+                                                <Image url="/images/eye.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                    </Button>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                        <VBox spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                           <children>
+                              <Label text="Genre">
                                  <font>
-                                    <Font size="14.0" />
+                                    <Font size="12.0" />
                                  </font>
-                              </PasswordField>
+                              </Label>
+                              <ComboBox fx:id="cb_gender" prefHeight="40.0" promptText="Sélectionnez le genre" styleClass="combo-box"/>
                            </children>
                         </VBox>
                      </children>
