--- a/src/main/resources/Login.fxml
+++ b/src/main/resources/Login.fxml
@@ -58,11 +58,21 @@
                                         <Font size="12.0" />
                                     </font>
                                 </Label>
-                                <PasswordField fx:id="tf_password" prefHeight="40.0" prefWidth="300.0" promptText="Entrez votre mot de passe" style="-fx-background-radius: 5;">
-                                    <font>
-                                        <Font size="14.0" />
-                                    </font>
-                                </PasswordField>
+                                <HBox spacing="0">
+                                    <children>
+                                        <PasswordField fx:id="tf_password" prefHeight="40.0" prefWidth="260.0" promptText="Entrez votre mot de passe" style="-fx-background-radius: 5;" />
+                                        <TextField fx:id="tf_password_visible" prefHeight="40.0" prefWidth="260.0" promptText="Entrez votre mot de passe" style="-fx-background-radius: 5;" visible="false" managed="false" />
+                                        <Button fx:id="btn_toggle_password" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" style="-fx-background-radius: 5;" onAction="#togglePasswordVisibility">
+                                            <graphic>
+                                                <ImageView fitHeight="20.0" fitWidth="20.0">
+                                                    <image>
+                                                        <Image url="/images/eye.png" />
+                                                    </image>
+                                                </ImageView>
+                                            </graphic>
+                                        </Button>
+                                    </children>
+                                </HBox>
                             </children>
                         </VBox>
                         <Button mnemonicParsing="false" onAction="#login" prefHeight="45.0" prefWidth="300.0" style="-fx-background-color: #2a6ec1; -fx-background-radius: 5;" text="CONNEXION" textFill="WHITE">
