--- a/src/main/resources/AdminDashboard.fxml
+++ b/src/main/resources/AdminDashboard.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,8 +15,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.effect.DropShadow?>
-<?import java.net.URL?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: #f4f6f9;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AdminDashboardController">
     <stylesheets>
@@ -42,7 +42,7 @@
                     </children>
                 </HBox>
                 <Pane prefHeight="30.0" prefWidth="240.0" />
-                <Label prefHeight="30.0" prefWidth="240.0" text="ADMINISTRATION" textFill="#90a4ae" textAlignment="CENTER">
+                <Label prefHeight="30.0" prefWidth="240.0" text="ADMINISTRATION" textAlignment="CENTER" textFill="#90a4ae">
                     <padding>
                         <Insets left="20.0" />
                     </padding>
@@ -166,7 +166,7 @@
                     <children>
                         <HBox alignment="CENTER_LEFT" prefHeight="80.0" prefWidth="760.0" style="-fx-background-color: white;">
                             <children>
-                                <Label text="Gestion des Utilisateurs" styleClass="label-header">
+                                <Label styleClass="label-header" text="Gestion des Utilisateurs">
                                     <HBox.margin>
                                         <Insets left="25.0" />
                                     </HBox.margin>
@@ -196,12 +196,12 @@
                                 </Button>
                             </children>
                             <effect>
-                                <DropShadow height="10.0" radius="4.5" width="10.0" color="#00000033" />
+                                <DropShadow color="#00000033" height="10.0" radius="4.5" width="10.0" />
                             </effect>
                         </HBox>
                         <HBox alignment="CENTER_LEFT" prefHeight="50.0" style="-fx-background-color: #f4f6f9;">
                             <children>
-                                <Label text="Liste des utilisateurs enregistrés" styleClass="label-subheader">
+                                <Label styleClass="label-subheader" text="Liste des utilisateurs enregistrés">
                                     <HBox.margin>
                                         <Insets left="25.0" />
                                     </HBox.margin>
@@ -211,12 +211,12 @@
                                 <Insets top="20.0" />
                             </VBox.margin>
                         </HBox>
-                        <ListView fx:id="clientListView" prefHeight="550.0" prefWidth="760.0" styleClass="client-list-view" VBox.vgrow="ALWAYS">
+                        <ListView fx:id="clientListView" prefHeight="531.0" prefWidth="870.0" styleClass="client-list-view" VBox.vgrow="ALWAYS">
                             <VBox.margin>
                                 <Insets bottom="25.0" left="25.0" right="25.0" top="10.0" />
                             </VBox.margin>
                             <effect>
-                                <DropShadow height="10.0" radius="4.5" width="10.0" color="#00000033" />
+                                <DropShadow color="#00000033" height="10.0" radius="4.5" width="10.0" />
                             </effect>
                         </ListView>
                     </children>
