--- a/src/main/resources/AdminReclamations.fxml
+++ b/src/main/resources/AdminReclamations.fxml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.effect.DropShadow?>
-<?import java.net.URL?>
 
 <AnchorPane style="-fx-background-color: #f4f6f9;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AdminReclamationsController">
     <stylesheets>
@@ -22,22 +19,24 @@
     <children>
         <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <HBox alignment="CENTER_LEFT" prefHeight="80.0" prefWidth="760.0" style="-fx-background-color: white;">
+                <!-- Header -->
+                <HBox alignment="CENTER_LEFT" style="-fx-background-color: white;" HBox.hgrow="ALWAYS">
                     <children>
-                        <Label text="Gestion des Réclamations" styleClass="label-header">
+                        <Label styleClass="label-header" text="Gestion des Réclamations">
                             <HBox.margin>
                                 <Insets left="25.0" />
                             </HBox.margin>
                         </Label>
                     </children>
                     <effect>
-                        <DropShadow height="10.0" radius="4.5" width="10.0" color="#00000033" />
+                        <DropShadow color="#00000033" height="10.0" radius="4.5" width="10.0" />
                     </effect>
                 </HBox>
 
-                <HBox alignment="CENTER_LEFT" prefHeight="50.0" style="-fx-background-color: #f4f6f9;">
+                <!-- List Section -->
+                <HBox alignment="CENTER_LEFT" style="-fx-background-color: #f4f6f9;" HBox.hgrow="ALWAYS">
                     <children>
-                        <Label text="Liste des réclamations clients" styleClass="label-subheader">
+                        <Label styleClass="label-subheader" text="Liste des réclamations clients">
                             <HBox.margin>
                                 <Insets left="25.0" />
                             </HBox.margin>
@@ -48,18 +47,20 @@
                     </VBox.margin>
                 </HBox>
 
-                <ListView fx:id="reclamationsListView" prefWidth="760.0" styleClass="reclamations-list" VBox.vgrow="ALWAYS">
+                <!-- ListView - Now expands to full width -->
+                <ListView fx:id="reclamationsListView" prefHeight="400.0" prefWidth="1261.0" styleClass="reclamations-list" VBox.vgrow="ALWAYS">
                     <VBox.margin>
-                        <Insets bottom="20.0" left="0.0" right="0.0" top="10.0" />
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="10.0" />
                     </VBox.margin>
                     <effect>
-                        <DropShadow height="10.0" radius="4.5" width="10.0" color="#00000033" />
+                        <DropShadow color="#00000033" height="10.0" radius="4.5" width="10.0" />
                     </effect>
                 </ListView>
 
-                <HBox alignment="CENTER_LEFT" prefHeight="50.0" style="-fx-background-color: #f4f6f9;">
+                <!-- Details Header -->
+                <HBox alignment="CENTER_LEFT" style="-fx-background-color: #f4f6f9;" HBox.hgrow="ALWAYS">
                     <children>
-                        <Label text="Détails de la réclamation" styleClass="label-subheader">
+                        <Label styleClass="label-subheader" text="Détails de la réclamation">
                             <HBox.margin>
                                 <Insets left="25.0" />
                             </HBox.margin>
@@ -67,37 +68,38 @@
                     </children>
                 </HBox>
 
-                <VBox prefHeight="300.0" prefWidth="760.0" styleClass="card">
+                <!-- Details Card - Now expands to full width -->
+                <VBox styleClass="card" VBox.vgrow="ALWAYS">
                     <VBox.margin>
-                        <Insets bottom="20.0" left="0.0" right="0.0" />
+                        <Insets bottom="20.0" left="20.0" right="20.0" />
                     </VBox.margin>
                     <padding>
                         <Insets bottom="20.0" left="25.0" right="25.0" top="20.0" />
                     </padding>
                     <children>
-                        <HBox prefHeight="40.0" prefWidth="710.0">
+                        <HBox prefHeight="40.0">
                             <children>
-                                <VBox prefHeight="40.0" prefWidth="710.0">
+                                <VBox>
                                     <children>
-                                        <Label text="Client" styleClass="label-info" />
-                                        <Label fx:id="clientLabel" text="-" styleClass="label-value" />
+                                        <Label styleClass="label-info" text="Client" />
+                                        <Label fx:id="clientLabel" styleClass="label-value" text="-" />
                                     </children>
                                 </VBox>
                             </children>
                         </HBox>
 
-                        <HBox prefHeight="40.0" prefWidth="710.0">
+                        <HBox prefHeight="40.0">
                             <children>
-                                <VBox prefHeight="40.0" prefWidth="355.0">
+                                <VBox prefWidth="350.0">
                                     <children>
-                                        <Label text="Type de réclamation" styleClass="label-info" />
-                                        <Label fx:id="typeLabel" text="--" styleClass="label-value" />
+                                        <Label styleClass="label-info" text="Type de réclamation" />
+                                        <Label fx:id="typeLabel" styleClass="label-value" text="--" />
                                     </children>
                                 </VBox>
-                                <VBox prefHeight="40.0" prefWidth="355.0">
+                                <VBox prefWidth="350.0">
                                     <children>
-                                        <Label text="Date de l'incident" styleClass="label-info" />
-                                        <Label fx:id="dateLabel" text="--" styleClass="label-value" />
+                                        <Label styleClass="label-info" text="Date de l'incident" />
+                                        <Label fx:id="dateLabel" styleClass="label-value" text="--" />
                                     </children>
                                 </VBox>
                             </children>
@@ -106,16 +108,21 @@
                             </VBox.margin>
                         </HBox>
 
-                        <Label text="Description" styleClass="label-info">
+                        <Label styleClass="label-info" text="Description">
                             <VBox.margin>
                                 <Insets top="10.0" />
                             </VBox.margin>
                         </Label>
-                        <TextArea fx:id="descriptionTextArea" editable="false" prefHeight="150.0" prefWidth="710.0" styleClass="text-area" wrapText="true" />
+                        <TextArea fx:id="descriptionTextArea" editable="false" prefHeight="150.0" styleClass="text-area" wrapText="true" />
                     </children>
                 </VBox>
 
-                <Label fx:id="statusLabel" alignment="CENTER" prefHeight="20.0" prefWidth="760.0" styleClass="label-value" />
+                <!-- Status Label - Centered at bottom -->
+                <Label fx:id="statusLabel" alignment="CENTER" styleClass="label-value">
+                    <VBox.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" />
+                    </VBox.margin>
+                </Label>
             </children>
         </VBox>
     </children>
